alignment color now correct for active button, shrinked the tiles a bit, phylip css override

--- a/public/stylesheets/isotope.css
+++ b/public/stylesheets/isotope.css
@@ -6,6 +6,7 @@ body {
 
 /* ---- Tooltip --- */
 
+
 .element-item .tooltiptext {
     visibility: hidden;
     width: 200px;
@@ -18,7 +19,7 @@ body {
     /* Position the tooltip */
     position: absolute;
     bottom: 30px;
-    z-index: 1;
+    z-index: 99;
 }
 
 .element-item:hover .tooltiptext {
@@ -75,7 +76,7 @@ body {
 
 .button:active,
 .button.alignment-iso.is-checked {
-  background-color: #D0BA89;
+  background-color: #FFCC66;
 }
 
 .button:active,
@@ -141,6 +142,7 @@ button.is-checked {
   margin-right: 0px;
   width: 730px;
   border: 0px solid #333;
+  padding-right: 5px;
 }
 
 /* clear fix */
@@ -153,9 +155,10 @@ button.is-checked {
 /* ---- .element-item ---- */
 
 .element-item {
+  
   position: relative;
   width: 104px;
-  height: 40px;
+  height: 30px;
   margin: 0px;
   padding: 10px;
   background: #888;
@@ -170,11 +173,20 @@ button.is-checked {
 
 .element-item .name {
   position: absolute;
-  top: 15px;
+  top: 10px;
   color: #000;
   letter-spacing: 0;
   font-size: 5px;
 }
+
+.element-item #phylip {
+  position: absolute;
+  top: 5px;
+  color: #000;
+  letter-spacing: 0;
+  font-size: 5px;
+}
+
 
 .element-item .symbol {
   position: absolute;
@@ -212,7 +224,7 @@ body #container #content .isotope .element-item .name  a {
 .element-item.tertstruct-iso   { background: #666699; }
 .element-item.classification-iso   { background: #D6ABAB; }
 .element-item.utils-iso   { background: #CC3333; }
-.element-item.search-iso   { background: #D0BA89; }
+.element-item.search-iso   { background: #D0BA89;}
 
 
 
